assets/css/v2/pre_fare/simulation.scss
.simulation-screen-scrolling-container {
  display: flex;
  height: 449px;
  margin-bottom: 20px;
  overflow: auto hidden;
  scrollbar-color: #607180 #2e3f4d;

  &::-webkit-scrollbar {
    width: 12px;
  }

  &::-webkit-scrollbar-thumb {
    background-color: #607180;
    border: 2px solid #2e3f4d;
    border-radius: 12px;
  }

  &::-webkit-scrollbar-track {
    background-color: #2e3f4d;
    border-radius: 12px;
    box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
  }

  .simulation {
    transform: scale(17.92%);
    transform-origin: top left;
  }

  .simulation__full-page {
    z-index: 999;
    max-width: 388px;
    max-height: 407px;
    margin: 16px;

    .simulation__title {
      margin-bottom: 10px;
      font-family: Inter, sans-serif;
      font-size: 16px;
      font-weight: 700;
      line-height: 24px;
      color: #f8f9fa;
    }
  }

  .simulation__left-screen {
    height: 375px;
    margin: 32px 16px 16px;

    .simulation__left-screen-widget-container {
      display: flex;

      .simulation__left-screen-widget {
        width: 194px;
        margin-right: 24px;

        & > * {
          width: 1080px;
          height: 1720px;
          overflow: hidden;
        }
      }
    }

    .simulation__title {
      margin-bottom: 10px;
      font-family: Inter, sans-serif;
      font-size: 16px;
      font-weight: 400;
      line-height: 24px;
      color: #f8f9fa;
    }
  }

  .simulation__right-screen {
    height: 375px;
    margin: 128px 16px 16px;

    .simulation__right-screen-widget-container {
      display: flex;

      .simulation__right-screen-widget {
        width: 194px;
        margin-right: 24px;

        & > * {
          width: 1080px;
          height: 1720px;
          overflow: hidden;
        }
      }
    }

    .simulation__title {
      margin-bottom: 10px;
      font-family: Inter, sans-serif;
      font-size: 16px;
      font-weight: 400;
      line-height: 24px;
      color: #f8f9fa;
    }
  }

  .divider::after {
    position: absolute;
    top: 48px;
    height: 343px;
    content: "";
    border-left: 1px solid #1e2933;
  }
}

